@@ -1,23 +1,28 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   https://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.apache.accumulo.miniclusterImpl;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
-import static org.apache.accumulo.fate.util.UtilWaitThread.sleepUninterruptibly;
+import static java.util.Objects.requireNonNull;
+import static java.util.concurrent.TimeUnit.NANOSECONDS;
+import static java.util.stream.Collectors.toList;
+import static org.apache.accumulo.core.util.UtilWaitThread.sleepUninterruptibly;
 
 import java.io.File;
 import java.io.FileInputStream;
@@ -28,10 +33,9 @@ import java.io.UncheckedIOException;
 import java.net.InetSocketAddress;
 import java.net.Socket;
 import java.net.URI;
-import java.nio.charset.StandardCharsets;
+import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
@@ -42,12 +46,18 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Properties;
 import java.util.Set;
+import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.FutureTask;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.atomic.AtomicReference;
+import java.util.function.Function;
+import java.util.function.Supplier;
+import java.util.stream.Stream;
 
 import org.apache.accumulo.cluster.AccumuloCluster;
 import org.apache.accumulo.core.Constants;
@@ -57,35 +67,32 @@ import org.apache.accumulo.core.client.AccumuloException;
 import org.apache.accumulo.core.client.AccumuloSecurityException;
 import org.apache.accumulo.core.client.security.tokens.AuthenticationToken;
 import org.apache.accumulo.core.clientImpl.ClientContext;
-import org.apache.accumulo.core.clientImpl.MasterClient;
-import org.apache.accumulo.core.clientImpl.thrift.ThriftNotActiveServiceException;
-import org.apache.accumulo.core.clientImpl.thrift.ThriftSecurityException;
 import org.apache.accumulo.core.conf.AccumuloConfiguration;
 import org.apache.accumulo.core.conf.ClientProperty;
 import org.apache.accumulo.core.conf.ConfigurationCopy;
 import org.apache.accumulo.core.conf.DefaultConfiguration;
 import org.apache.accumulo.core.conf.Property;
 import org.apache.accumulo.core.conf.SiteConfiguration;
-import org.apache.accumulo.core.master.thrift.MasterClientService;
-import org.apache.accumulo.core.master.thrift.MasterGoalState;
-import org.apache.accumulo.core.master.thrift.MasterMonitorInfo;
+import org.apache.accumulo.core.data.InstanceId;
+import org.apache.accumulo.core.fate.zookeeper.ZooReaderWriter;
+import org.apache.accumulo.core.fate.zookeeper.ZooUtil;
+import org.apache.accumulo.core.manager.thrift.ManagerGoalState;
+import org.apache.accumulo.core.manager.thrift.ManagerMonitorInfo;
+import org.apache.accumulo.core.rpc.clients.ThriftClientTypes;
 import org.apache.accumulo.core.trace.TraceUtil;
 import org.apache.accumulo.core.util.Pair;
-import org.apache.accumulo.fate.zookeeper.IZooReaderWriter;
-import org.apache.accumulo.fate.zookeeper.ZooUtil;
-import org.apache.accumulo.master.state.SetGoalState;
+import org.apache.accumulo.manager.state.SetGoalState;
 import org.apache.accumulo.minicluster.MiniAccumuloCluster;
 import org.apache.accumulo.minicluster.ServerType;
 import org.apache.accumulo.server.ServerContext;
-import org.apache.accumulo.server.ServerUtil;
+import org.apache.accumulo.server.ServerDirs;
 import org.apache.accumulo.server.fs.VolumeManager;
-import org.apache.accumulo.server.fs.VolumeManagerImpl;
 import org.apache.accumulo.server.init.Initialize;
 import org.apache.accumulo.server.util.AccumuloStatus;
 import org.apache.accumulo.server.util.PortUtils;
-import org.apache.accumulo.server.zookeeper.ZooReaderWriterFactory;
 import org.apache.accumulo.start.Main;
 import org.apache.accumulo.start.classloader.vfs.MiniDFSUtil;
+import org.apache.accumulo.start.spi.KeywordExecutable;
 import org.apache.commons.io.IOUtils;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.CommonConfigurationKeys;
@@ -93,15 +100,17 @@ import org.apache.hadoop.fs.FileSystem;
 import org.apache.hadoop.fs.Path;
 import org.apache.hadoop.hdfs.DFSConfigKeys;
 import org.apache.hadoop.hdfs.MiniDFSCluster;
-import org.apache.thrift.TException;
 import org.apache.zookeeper.KeeperException;
-import org.apache.zookeeper.data.Stat;
+import org.apache.zookeeper.KeeperException.Code;
+import org.apache.zookeeper.ZKUtil;
+import org.apache.zookeeper.ZooKeeper;
+import org.apache.zookeeper.ZooKeeper.States;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Joiner;
-import com.google.common.collect.Iterables;
+import com.google.common.base.Suppliers;
 import com.google.common.collect.Maps;
 
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
@@ -117,23 +126,150 @@ import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 public class MiniAccumuloClusterImpl implements AccumuloCluster {
   private static final Logger log = LoggerFactory.getLogger(MiniAccumuloClusterImpl.class);
 
+  private final Set<Pair<ServerType,Integer>> debugPorts = new HashSet<>();
+  private final File zooCfgFile;
+  private final String dfsUri;
+  private final MiniAccumuloConfigImpl config;
+  private final Supplier<Properties> clientProperties;
+  private final SiteConfiguration siteConfig;
+  private final Supplier<ServerContext> context;
+  private final AtomicReference<MiniDFSCluster> miniDFS = new AtomicReference<>();
+  private final List<Process> cleanup = new ArrayList<>();
+  private final MiniAccumuloClusterControl clusterControl;
+
   private boolean initialized = false;
-
-  private Set<Pair<ServerType,Integer>> debugPorts = new HashSet<>();
-
-  private File zooCfgFile;
-  private String dfsUri;
-  private SiteConfiguration siteConfig;
-  private ServerContext context;
-  private Properties clientProperties;
-
-  private MiniAccumuloConfigImpl config;
-  private MiniDFSCluster miniDFS = null;
-  private List<Process> cleanup = new ArrayList<>();
-
   private ExecutorService executor;
 
-  private MiniAccumuloClusterControl clusterControl;
+  /**
+   *
+   * @param dir
+   *          An empty or nonexistent temp directory that Accumulo and Zookeeper can store data in.
+   *          Creating the directory is left to the user. Java 7, Guava, and Junit provide methods
+   *          for creating temporary directories.
+   * @param rootPassword
+   *          Initial root password for instance.
+   */
+  public MiniAccumuloClusterImpl(File dir, String rootPassword) throws IOException {
+    this(new MiniAccumuloConfigImpl(dir, rootPassword));
+  }
+
+  /**
+   * @param config
+   *          initial configuration
+   */
+  @SuppressWarnings("deprecation")
+  public MiniAccumuloClusterImpl(MiniAccumuloConfigImpl config) throws IOException {
+
+    this.config = config.initialize();
+    this.clientProperties = Suppliers.memoize(
+        () -> Accumulo.newClientProperties().from(config.getClientPropsFile().toPath()).build());
+
+    if (Boolean.valueOf(config.getSiteConfig().get(Property.TSERV_NATIVEMAP_ENABLED.getKey()))
+        && config.getNativeLibPaths().length == 0
+        && !config.getSystemProperties().containsKey("accumulo.native.lib.path")) {
+      throw new IllegalStateException(
+          "MAC configured to use native maps, but native library path was not provided.");
+    }
+
+    mkdirs(config.getConfDir());
+    mkdirs(config.getLogDir());
+    mkdirs(config.getLibDir());
+    mkdirs(config.getLibExtDir());
+
+    if (!config.useExistingInstance()) {
+      if (!config.useExistingZooKeepers()) {
+        mkdirs(config.getZooKeeperDir());
+      }
+      mkdirs(config.getAccumuloDir());
+    }
+
+    if (config.useMiniDFS()) {
+      File nn = new File(config.getAccumuloDir(), "nn");
+      mkdirs(nn);
+      File dn = new File(config.getAccumuloDir(), "dn");
+      mkdirs(dn);
+      File dfs = new File(config.getAccumuloDir(), "dfs");
+      mkdirs(dfs);
+      Configuration conf = new Configuration();
+      conf.set(DFSConfigKeys.DFS_NAMENODE_NAME_DIR_KEY, nn.getAbsolutePath());
+      conf.set(DFSConfigKeys.DFS_DATANODE_DATA_DIR_KEY, dn.getAbsolutePath());
+      conf.set(DFSConfigKeys.DFS_REPLICATION_KEY, "1");
+      conf.set(DFSConfigKeys.DFS_NAMENODE_REPLICATION_MIN_KEY, "1");
+      conf.set("dfs.support.append", "true");
+      conf.set("dfs.datanode.synconclose", "true");
+      conf.set("dfs.datanode.data.dir.perm", MiniDFSUtil.computeDatanodeDirectoryPermission());
+      String oldTestBuildData = System.setProperty("test.build.data", dfs.getAbsolutePath());
+      miniDFS.set(new MiniDFSCluster.Builder(conf).build());
+      if (oldTestBuildData == null) {
+        System.clearProperty("test.build.data");
+      } else {
+        System.setProperty("test.build.data", oldTestBuildData);
+      }
+      miniDFS.get().waitClusterUp();
+      InetSocketAddress dfsAddress = miniDFS.get().getNameNode().getNameNodeAddress();
+      dfsUri = "hdfs://" + dfsAddress.getHostName() + ":" + dfsAddress.getPort();
+      File coreFile = new File(config.getConfDir(), "core-site.xml");
+      writeConfig(coreFile, Collections.singletonMap("fs.default.name", dfsUri).entrySet());
+      File hdfsFile = new File(config.getConfDir(), "hdfs-site.xml");
+      writeConfig(hdfsFile, conf);
+
+      Map<String,String> siteConfig = config.getSiteConfig();
+      siteConfig.put(Property.INSTANCE_VOLUMES.getKey(), dfsUri + "/accumulo");
+      config.setSiteConfig(siteConfig);
+    } else if (config.useExistingInstance()) {
+      dfsUri = config.getHadoopConfiguration().get(CommonConfigurationKeys.FS_DEFAULT_NAME_KEY);
+    } else {
+      dfsUri = "file:///";
+    }
+
+    File clientConfFile = config.getClientConfFile();
+    // Write only the properties that correspond to ClientConfiguration properties
+    writeConfigProperties(clientConfFile,
+        Maps.filterEntries(config.getSiteConfig(),
+            v -> org.apache.accumulo.core.client.ClientConfiguration.ClientProperty
+                .getPropertyByKey(v.getKey()) != null));
+
+    Map<String,String> clientProps = config.getClientProps();
+    clientProps.put(ClientProperty.INSTANCE_ZOOKEEPERS.getKey(), config.getZooKeepers());
+    clientProps.put(ClientProperty.INSTANCE_NAME.getKey(), config.getInstanceName());
+    if (!clientProps.containsKey(ClientProperty.AUTH_TYPE.getKey())) {
+      clientProps.put(ClientProperty.AUTH_TYPE.getKey(), "password");
+      clientProps.put(ClientProperty.AUTH_PRINCIPAL.getKey(), config.getRootUserName());
+      clientProps.put(ClientProperty.AUTH_TOKEN.getKey(), config.getRootPassword());
+    }
+
+    File clientPropsFile = config.getClientPropsFile();
+    writeConfigProperties(clientPropsFile, clientProps);
+
+    File siteFile = new File(config.getConfDir(), "accumulo.properties");
+    writeConfigProperties(siteFile, config.getSiteConfig());
+    this.siteConfig = SiteConfiguration.fromFile(siteFile).build();
+    this.context = Suppliers.memoize(() -> new ServerContext(siteConfig));
+
+    if (!config.useExistingInstance() && !config.useExistingZooKeepers()) {
+      zooCfgFile = new File(config.getConfDir(), "zoo.cfg");
+      FileWriter fileWriter = new FileWriter(zooCfgFile, UTF_8);
+
+      // zookeeper uses Properties to read its config, so use that to write in order to properly
+      // escape things like Windows paths
+      Properties zooCfg = new Properties();
+      zooCfg.setProperty("tickTime", "2000");
+      zooCfg.setProperty("initLimit", "10");
+      zooCfg.setProperty("syncLimit", "5");
+      zooCfg.setProperty("clientPortAddress", "127.0.0.1");
+      zooCfg.setProperty("clientPort", config.getZooKeeperPort() + "");
+      zooCfg.setProperty("maxClientCnxns", "1000");
+      zooCfg.setProperty("dataDir", config.getZooKeeperDir().getAbsolutePath());
+      zooCfg.setProperty("4lw.commands.whitelist", "ruok,wchs");
+      zooCfg.setProperty("admin.enableServer", "false");
+      zooCfg.store(fileWriter, null);
+
+      fileWriter.close();
+    } else {
+      zooCfgFile = null;
+    }
+    clusterControl = new MiniAccumuloClusterControl(this);
+  }
 
   File getZooCfgFile() {
     return zooCfgFile;
@@ -192,7 +328,7 @@ public class MiniAccumuloClusterImpl implements AccumuloCluster {
 
     public String readStdOut() {
       try (InputStream in = new FileInputStream(stdOut)) {
-        return IOUtils.toString(in, StandardCharsets.UTF_8);
+        return IOUtils.toString(in, UTF_8);
       } catch (IOException e) {
         throw new UncheckedIOException(e);
       }
@@ -205,30 +341,28 @@ public class MiniAccumuloClusterImpl implements AccumuloCluster {
       throws IOException {
     String javaHome = System.getProperty("java.home");
     String javaBin = javaHome + File.separator + "bin" + File.separator + "java";
-    String classpath = getClasspath();
 
-    String className = clazz.getName();
+    var basicArgs = Stream.of(javaBin, "-Dproc=" + clazz.getSimpleName());
+    var jvmArgs = extraJvmOpts.stream();
+    var propsArgs = config.getSystemProperties().entrySet().stream()
+        .map(e -> String.format("-D%s=%s", e.getKey(), e.getValue()));
 
-    ArrayList<String> argList = new ArrayList<>();
-    argList.addAll(Arrays.asList(javaBin, "-Dproc=" + clazz.getSimpleName(), "-cp", classpath));
-    argList.addAll(extraJvmOpts);
-    for (Entry<String,String> sysProp : config.getSystemProperties().entrySet()) {
-      argList.add(String.format("-D%s=%s", sysProp.getKey(), sysProp.getValue()));
-    }
     // @formatter:off
-    argList.addAll(Arrays.asList(
-        "-XX:+UseConcMarkSweepGC",
-        "-XX:CMSInitiatingOccupancyFraction=75",
+    var hardcodedArgs = Stream.of(
         "-Dapple.awt.UIElement=true",
         "-Djava.net.preferIPv4Stack=true",
         "-XX:+PerfDisableSharedMem",
         "-XX:+AlwaysPreTouch",
-        Main.class.getName(), className));
+        Main.class.getName(), clazz.getName());
     // @formatter:on
-    argList.addAll(Arrays.asList(args));
 
+    // concatenate all the args sources into a single list of args
+    var argList = Stream.of(basicArgs, jvmArgs, propsArgs, hardcodedArgs, Stream.of(args))
+        .flatMap(Function.identity()).collect(toList());
     ProcessBuilder builder = new ProcessBuilder(argList);
 
+    final String classpath = getClasspath();
+    builder.environment().put("CLASSPATH", classpath);
     builder.environment().put("ACCUMULO_HOME", config.getDir().getAbsolutePath());
     builder.environment().put("ACCUMULO_LOG_DIR", config.getLogDir().getAbsolutePath());
     builder.environment().put("ACCUMULO_CLIENT_CONF_PATH",
@@ -252,8 +386,7 @@ public class MiniAccumuloClusterImpl implements AccumuloCluster {
     }
 
     log.debug("Starting MiniAccumuloCluster process with class: " + clazz.getSimpleName()
-        + "\n, jvmOpts: " + extraJvmOpts + "\n, classpath: " + classpath + "\n, args: " + argList
-        + "\n, environment: " + builder.environment());
+        + "\n, args: " + argList + "\n, environment: " + builder.environment());
 
     int hashcode = builder.hashCode();
 
@@ -267,15 +400,31 @@ public class MiniAccumuloClusterImpl implements AccumuloCluster {
     return new ProcessInfo(process, stdOut);
   }
 
+  public ProcessInfo _exec(KeywordExecutable server, ServerType serverType,
+      Map<String,String> configOverrides, String... args) throws IOException {
+    String[] modifiedArgs;
+    if (args == null || args.length == 0) {
+      modifiedArgs = new String[] {server.keyword()};
+    } else {
+      modifiedArgs =
+          Stream.concat(Stream.of(server.keyword()), Stream.of(args)).toArray(String[]::new);
+    }
+    return _exec(Main.class, serverType, configOverrides, modifiedArgs);
+  }
+
   public ProcessInfo _exec(Class<?> clazz, ServerType serverType,
       Map<String,String> configOverrides, String... args) throws IOException {
     List<String> jvmOpts = new ArrayList<>();
+    if (serverType == ServerType.ZOOKEEPER) {
+      // disable zookeeper's log4j 1.2 jmx support, which requires old versions of log4j 1.2
+      // and won't work with reload4j or log4j2
+      jvmOpts.add("-Dzookeeper.jmx.log4j.disable=true");
+    }
     jvmOpts.add("-Xmx" + config.getMemory(serverType));
     if (configOverrides != null && !configOverrides.isEmpty()) {
       File siteFile =
           Files.createTempFile(config.getConfDir().toPath(), "accumulo", ".properties").toFile();
-      Map<String,String> confMap = new HashMap<>();
-      confMap.putAll(config.getSiteConfig());
+      Map<String,String> confMap = new HashMap<>(config.getSiteConfig());
       confMap.putAll(configOverrides);
       writeConfigProperties(siteFile, confMap);
       jvmOpts.add("-Daccumulo.properties=" + siteFile.getName());
@@ -289,124 +438,6 @@ public class MiniAccumuloClusterImpl implements AccumuloCluster {
     return _exec(clazz, jvmOpts, args);
   }
 
-  /**
-   *
-   * @param dir
-   *          An empty or nonexistent temp directory that Accumulo and Zookeeper can store data in.
-   *          Creating the directory is left to the user. Java 7, Guava, and Junit provide methods
-   *          for creating temporary directories.
-   * @param rootPassword
-   *          Initial root password for instance.
-   */
-  public MiniAccumuloClusterImpl(File dir, String rootPassword) throws IOException {
-    this(new MiniAccumuloConfigImpl(dir, rootPassword));
-  }
-
-  /**
-   * @param config
-   *          initial configuration
-   */
-  @SuppressWarnings("deprecation")
-  public MiniAccumuloClusterImpl(MiniAccumuloConfigImpl config) throws IOException {
-
-    this.config = config.initialize();
-
-    mkdirs(config.getConfDir());
-    mkdirs(config.getLogDir());
-    mkdirs(config.getLibDir());
-    mkdirs(config.getLibExtDir());
-
-    if (!config.useExistingInstance()) {
-      if (!config.useExistingZooKeepers()) {
-        mkdirs(config.getZooKeeperDir());
-      }
-      mkdirs(config.getAccumuloDir());
-    }
-
-    if (config.useMiniDFS()) {
-      File nn = new File(config.getAccumuloDir(), "nn");
-      mkdirs(nn);
-      File dn = new File(config.getAccumuloDir(), "dn");
-      mkdirs(dn);
-      File dfs = new File(config.getAccumuloDir(), "dfs");
-      mkdirs(dfs);
-      Configuration conf = new Configuration();
-      conf.set(DFSConfigKeys.DFS_NAMENODE_NAME_DIR_KEY, nn.getAbsolutePath());
-      conf.set(DFSConfigKeys.DFS_DATANODE_DATA_DIR_KEY, dn.getAbsolutePath());
-      conf.set(DFSConfigKeys.DFS_REPLICATION_KEY, "1");
-      conf.set(DFSConfigKeys.DFS_NAMENODE_REPLICATION_MIN_KEY, "1");
-      conf.set("dfs.support.append", "true");
-      conf.set("dfs.datanode.synconclose", "true");
-      conf.set("dfs.datanode.data.dir.perm", MiniDFSUtil.computeDatanodeDirectoryPermission());
-      String oldTestBuildData = System.setProperty("test.build.data", dfs.getAbsolutePath());
-      miniDFS = new MiniDFSCluster.Builder(conf).build();
-      if (oldTestBuildData == null) {
-        System.clearProperty("test.build.data");
-      } else {
-        System.setProperty("test.build.data", oldTestBuildData);
-      }
-      miniDFS.waitClusterUp();
-      InetSocketAddress dfsAddress = miniDFS.getNameNode().getNameNodeAddress();
-      dfsUri = "hdfs://" + dfsAddress.getHostName() + ":" + dfsAddress.getPort();
-      File coreFile = new File(config.getConfDir(), "core-site.xml");
-      writeConfig(coreFile, Collections.singletonMap("fs.default.name", dfsUri).entrySet());
-      File hdfsFile = new File(config.getConfDir(), "hdfs-site.xml");
-      writeConfig(hdfsFile, conf);
-
-      Map<String,String> siteConfig = config.getSiteConfig();
-      siteConfig.put(Property.INSTANCE_DFS_URI.getKey(), dfsUri);
-      siteConfig.put(Property.INSTANCE_DFS_DIR.getKey(), "/accumulo");
-      config.setSiteConfig(siteConfig);
-    } else if (config.useExistingInstance()) {
-      dfsUri = config.getHadoopConfiguration().get(CommonConfigurationKeys.FS_DEFAULT_NAME_KEY);
-    } else {
-      dfsUri = "file:///";
-    }
-
-    File clientConfFile = config.getClientConfFile();
-    // Write only the properties that correspond to ClientConfiguration properties
-    writeConfigProperties(clientConfFile,
-        Maps.filterEntries(config.getSiteConfig(),
-            v -> org.apache.accumulo.core.client.ClientConfiguration.ClientProperty
-                .getPropertyByKey(v.getKey()) != null));
-
-    Map<String,String> clientProps = config.getClientProps();
-    clientProps.put(ClientProperty.INSTANCE_ZOOKEEPERS.getKey(), config.getZooKeepers());
-    clientProps.put(ClientProperty.INSTANCE_NAME.getKey(), config.getInstanceName());
-    if (!clientProps.containsKey(ClientProperty.AUTH_TYPE.getKey())) {
-      clientProps.put(ClientProperty.AUTH_TYPE.getKey(), "password");
-      clientProps.put(ClientProperty.AUTH_PRINCIPAL.getKey(), config.getRootUserName());
-      clientProps.put(ClientProperty.AUTH_TOKEN.getKey(), config.getRootPassword());
-    }
-
-    File clientPropsFile = config.getClientPropsFile();
-    writeConfigProperties(clientPropsFile, clientProps);
-
-    File siteFile = new File(config.getConfDir(), "accumulo.properties");
-    writeConfigProperties(siteFile, config.getSiteConfig());
-    siteConfig = SiteConfiguration.fromFile(siteFile).build();
-
-    if (!config.useExistingInstance() && !config.useExistingZooKeepers()) {
-      zooCfgFile = new File(config.getConfDir(), "zoo.cfg");
-      FileWriter fileWriter = new FileWriter(zooCfgFile);
-
-      // zookeeper uses Properties to read its config, so use that to write in order to properly
-      // escape things like Windows paths
-      Properties zooCfg = new Properties();
-      zooCfg.setProperty("tickTime", "2000");
-      zooCfg.setProperty("initLimit", "10");
-      zooCfg.setProperty("syncLimit", "5");
-      zooCfg.setProperty("clientPortAddress", "127.0.0.1");
-      zooCfg.setProperty("clientPort", config.getZooKeeperPort() + "");
-      zooCfg.setProperty("maxClientCnxns", "1000");
-      zooCfg.setProperty("dataDir", config.getZooKeeperDir().getAbsolutePath());
-      zooCfg.store(fileWriter, null);
-
-      fileWriter.close();
-    }
-    clusterControl = new MiniAccumuloClusterControl(this);
-  }
-
   private static void mkdirs(File dir) {
     if (!dir.mkdirs()) {
       log.warn("Unable to create {}", dir);
@@ -415,7 +446,7 @@ public class MiniAccumuloClusterImpl implements AccumuloCluster {
 
   private void writeConfig(File file, Iterable<Map.Entry<String,String>> settings)
       throws IOException {
-    FileWriter fileWriter = new FileWriter(file);
+    FileWriter fileWriter = new FileWriter(file, UTF_8);
     fileWriter.append("<configuration>\n");
 
     for (Entry<String,String> entry : settings) {
@@ -429,7 +460,7 @@ public class MiniAccumuloClusterImpl implements AccumuloCluster {
   }
 
   private void writeConfigProperties(File file, Map<String,String> settings) throws IOException {
-    FileWriter fileWriter = new FileWriter(file);
+    FileWriter fileWriter = new FileWriter(file, UTF_8);
 
     for (Entry<String,String> entry : settings.entrySet()) {
       fileWriter.append(entry.getKey() + "=" + entry.getValue() + "\n");
@@ -444,7 +475,7 @@ public class MiniAccumuloClusterImpl implements AccumuloCluster {
       justification = "insecure socket used for reservation")
   @Override
   public synchronized void start() throws IOException, InterruptedException {
-    if (config.useMiniDFS() && miniDFS == null) {
+    if (config.useMiniDFS() && miniDFS.get() == null) {
       throw new IllegalStateException("Cannot restart mini when using miniDFS");
     }
 
@@ -453,20 +484,18 @@ public class MiniAccumuloClusterImpl implements AccumuloCluster {
     if (config.useExistingInstance()) {
       AccumuloConfiguration acuConf = config.getAccumuloConfiguration();
       Configuration hadoopConf = config.getHadoopConfiguration();
+      ServerDirs serverDirs = new ServerDirs(acuConf, hadoopConf);
 
-      ConfigurationCopy cc = new ConfigurationCopy(acuConf);
-      VolumeManager fs;
-      try {
-        fs = VolumeManagerImpl.get(cc, hadoopConf);
+      Path instanceIdPath;
+      try (var fs = getServerContext().getVolumeManager()) {
+        instanceIdPath = serverDirs.getInstanceIdLocation(fs.getFirst());
       } catch (IOException e) {
-        throw new RuntimeException(e);
+        throw new UncheckedIOException(e);
       }
-      Path instanceIdPath = ServerUtil.getAccumuloInstanceIdPath(fs);
 
-      String instanceIdFromFile = ZooUtil.getInstanceIDFromHdfs(instanceIdPath, cc, hadoopConf);
-      IZooReaderWriter zrw = new ZooReaderWriterFactory().getZooReaderWriter(
-          cc.get(Property.INSTANCE_ZK_HOST), (int) cc.getTimeInMillis(Property.INSTANCE_ZK_TIMEOUT),
-          cc.get(Property.INSTANCE_SECRET));
+      InstanceId instanceIdFromFile =
+          VolumeManager.getInstanceIDFromHdfs(instanceIdPath, hadoopConf);
+      ZooReaderWriter zrw = getServerContext().getZooReaderWriter();
 
       String rootPath = ZooUtil.getRoot(instanceIdFromFile);
 
@@ -474,22 +503,22 @@ public class MiniAccumuloClusterImpl implements AccumuloCluster {
       try {
         for (String name : zrw.getChildren(Constants.ZROOT + Constants.ZINSTANCES)) {
           String instanceNamePath = Constants.ZROOT + Constants.ZINSTANCES + "/" + name;
-          byte[] bytes = zrw.getData(instanceNamePath, new Stat());
-          String iid = new String(bytes, UTF_8);
+          byte[] bytes = zrw.getData(instanceNamePath);
+          InstanceId iid = InstanceId.of(new String(bytes, UTF_8));
           if (iid.equals(instanceIdFromFile)) {
             instanceName = name;
           }
         }
       } catch (KeeperException e) {
-        throw new RuntimeException("Unable to read instance name from zookeeper.", e);
+        throw new IllegalStateException("Unable to read instance name from zookeeper.", e);
       }
       if (instanceName == null) {
-        throw new RuntimeException("Unable to read instance name from zookeeper.");
+        throw new IllegalStateException("Unable to read instance name from zookeeper.");
       }
 
       config.setInstanceName(instanceName);
       if (!AccumuloStatus.isAccumuloOffline(zrw, rootPath)) {
-        throw new RuntimeException(
+        throw new IllegalStateException(
             "The Accumulo instance being used is already running. Aborting.");
       }
     } else {
@@ -506,6 +535,7 @@ public class MiniAccumuloClusterImpl implements AccumuloCluster {
       }
 
       if (!config.useExistingZooKeepers()) {
+        log.warn("Starting ZooKeeper");
         control.start(ServerType.ZOOKEEPER);
       }
 
@@ -514,9 +544,7 @@ public class MiniAccumuloClusterImpl implements AccumuloCluster {
           // sleep a little bit to let zookeeper come up before calling init, seems to work better
           long startTime = System.currentTimeMillis();
           while (true) {
-            Socket s = null;
-            try {
-              s = new Socket("localhost", config.getZooKeeperPort());
+            try (Socket s = new Socket("localhost", config.getZooKeeperPort())) {
               s.setReuseAddress(true);
               s.getOutputStream().write("ruok\n".getBytes());
               s.getOutputStream().flush();
@@ -525,7 +553,7 @@ public class MiniAccumuloClusterImpl implements AccumuloCluster {
               if (n >= 4 && new String(buffer, 0, 4).equals("imok")) {
                 break;
               }
-            } catch (Exception e) {
+            } catch (IOException | RuntimeException e) {
               if (System.currentTimeMillis() - startTime >= config.getZooKeeperStartupTime()) {
                 throw new ZooKeeperBindException("Zookeeper did not start within "
                     + (config.getZooKeeperStartupTime() / 1000) + " seconds. Check the logs in "
@@ -533,10 +561,6 @@ public class MiniAccumuloClusterImpl implements AccumuloCluster {
               }
               // Don't spin absurdly fast
               sleepUninterruptibly(250, TimeUnit.MILLISECONDS);
-            } finally {
-              if (s != null) {
-                s.close();
-              }
             }
           }
         }
@@ -556,13 +580,16 @@ public class MiniAccumuloClusterImpl implements AccumuloCluster {
           args.add(config.getRootPassword());
         }
 
+        log.warn("Initializing ZooKeeper");
         Process initProcess = exec(Initialize.class, args.toArray(new String[0])).getProcess();
         int ret = initProcess.waitFor();
         if (ret != 0) {
-          throw new RuntimeException("Initialize process returned " + ret + ". Check the logs in "
-              + config.getLogDir() + " for errors.");
+          throw new IllegalStateException("Initialize process returned " + ret
+              + ". Check the logs in " + config.getLogDir() + " for errors.");
         }
         initialized = true;
+      } else {
+        log.warn("Not initializing ZooKeeper, already initialized");
       }
     }
 
@@ -573,7 +600,7 @@ public class MiniAccumuloClusterImpl implements AccumuloCluster {
 
     int ret = 0;
     for (int i = 0; i < 5; i++) {
-      ret = exec(Main.class, SetGoalState.class.getName(), MasterGoalState.NORMAL.toString())
+      ret = exec(Main.class, SetGoalState.class.getName(), ManagerGoalState.NORMAL.toString())
           .getProcess().waitFor();
       if (ret == 0) {
         break;
@@ -581,21 +608,154 @@ public class MiniAccumuloClusterImpl implements AccumuloCluster {
       sleepUninterruptibly(1, TimeUnit.SECONDS);
     }
     if (ret != 0) {
-      throw new RuntimeException("Could not set master goal state, process returned " + ret
+      throw new IllegalStateException("Could not set manager goal state, process returned " + ret
           + ". Check the logs in " + config.getLogDir() + " for errors.");
     }
 
-    control.start(ServerType.MASTER);
+    control.start(ServerType.MANAGER);
     control.start(ServerType.GARBAGE_COLLECTOR);
 
     if (executor == null) {
       executor = Executors.newSingleThreadExecutor();
     }
+
+    verifyUp();
+
+  }
+
+  // wait up to 10 seconds for the process to start
+  private static void waitForProcessStart(Process p, String name) throws InterruptedException {
+    long start = System.nanoTime();
+    while (p.info().startInstant().isEmpty()) {
+      if (NANOSECONDS.toSeconds(System.nanoTime() - start) > 10) {
+        throw new IllegalStateException(
+            "Error starting " + name + " - instance not started within 10 seconds");
+      }
+      Thread.sleep(50);
+    }
+  }
+
+  private void verifyUp() throws InterruptedException, IOException {
+
+    int numTries = 10;
+
+    requireNonNull(getClusterControl().managerProcess, "Error starting Manager - no process");
+    waitForProcessStart(getClusterControl().managerProcess, "Manager");
+
+    requireNonNull(getClusterControl().gcProcess, "Error starting GC - no process");
+    waitForProcessStart(getClusterControl().gcProcess, "GC");
+
+    int tsExpectedCount = 0;
+    for (Process tsp : getClusterControl().tabletServerProcesses) {
+      tsExpectedCount++;
+      requireNonNull(tsp, "Error starting TabletServer " + tsExpectedCount + " - no process");
+      waitForProcessStart(tsp, "TabletServer" + tsExpectedCount);
+    }
+
+    try (ZooKeeper zk = new ZooKeeper(getZooKeepers(), 60000, event -> log.warn("{}", event))) {
+
+      String secret = getSiteConfiguration().get(Property.INSTANCE_SECRET);
+
+      while (!(zk.getState() == States.CONNECTED)) {
+        log.info("Waiting for ZK client to connect, state: {} - will retry", zk.getState());
+        Thread.sleep(1000);
+      }
+
+      String instanceId = null;
+      for (int i = 0; i < numTries; i++) {
+        if (zk.getState() == States.CONNECTED) {
+          ZooUtil.digestAuth(zk, secret);
+          try {
+            final AtomicInteger rc = new AtomicInteger();
+            final CountDownLatch waiter = new CountDownLatch(1);
+            zk.sync("/", (code, arg1, arg2) -> {
+              rc.set(code);
+              waiter.countDown();
+            }, null);
+            waiter.await();
+            Code code = Code.get(rc.get());
+            if (code != Code.OK) {
+              throw KeeperException.create(code);
+            }
+            String instanceNamePath =
+                Constants.ZROOT + Constants.ZINSTANCES + "/" + config.getInstanceName();
+            byte[] bytes = zk.getData(instanceNamePath, null, null);
+            instanceId = new String(bytes, UTF_8);
+            break;
+          } catch (KeeperException e) {
+            log.warn("Error trying to read instance id from zookeeper: " + e.getMessage());
+            log.debug("Unable to read instance id from zookeeper.", e);
+          }
+        } else {
+          log.warn("ZK client not connected, state: {}", zk.getState());
+        }
+        Thread.sleep(1000);
+      }
+
+      if (instanceId == null) {
+        for (int i = 0; i < numTries; i++) {
+          if (zk.getState() == States.CONNECTED) {
+            ZooUtil.digestAuth(zk, secret);
+            try {
+              log.warn("******* COULD NOT FIND INSTANCE ID - DUMPING ZK ************");
+              log.warn("Connected to ZooKeeper: {}", getZooKeepers());
+              log.warn("Looking for instanceId at {}",
+                  Constants.ZROOT + Constants.ZINSTANCES + "/" + config.getInstanceName());
+              ZKUtil.visitSubTreeDFS(zk, Constants.ZROOT, false,
+                  (rc, path, ctx, name) -> log.warn("{}", path));
+              log.warn("******* END ZK DUMP ************");
+            } catch (KeeperException | InterruptedException e) {
+              log.error("Error dumping zk", e);
+            }
+          }
+          Thread.sleep(1000);
+        }
+        throw new IllegalStateException("Unable to find instance id from zookeeper.");
+      }
+
+      String rootPath = Constants.ZROOT + "/" + instanceId;
+      int tsActualCount = 0;
+      try {
+        while (tsActualCount < tsExpectedCount) {
+          tsActualCount = 0;
+          for (String child : zk.getChildren(rootPath + Constants.ZTSERVERS, null)) {
+            if (zk.getChildren(rootPath + Constants.ZTSERVERS + "/" + child, null).isEmpty()) {
+              log.info("TServer " + tsActualCount + " not yet present in ZooKeeper");
+            } else {
+              tsActualCount++;
+              log.info("TServer " + tsActualCount + " present in ZooKeeper");
+            }
+          }
+          Thread.sleep(500);
+        }
+      } catch (KeeperException e) {
+        throw new IllegalStateException("Unable to read TServer information from zookeeper.", e);
+      }
+
+      try {
+        while (zk.getChildren(rootPath + Constants.ZMANAGER_LOCK, null).isEmpty()) {
+          log.info("Manager not yet present in ZooKeeper");
+          Thread.sleep(500);
+        }
+      } catch (KeeperException e) {
+        throw new IllegalStateException("Unable to read Manager information from zookeeper.", e);
+      }
+
+      try {
+        while (zk.getChildren(rootPath + Constants.ZGC_LOCK, null).isEmpty()) {
+          log.info("GC not yet present in ZooKeeper");
+          Thread.sleep(500);
+        }
+      } catch (KeeperException e) {
+        throw new IllegalStateException("Unable to read GC information from zookeeper.", e);
+      }
+
+    }
   }
 
   private List<String> buildRemoteDebugParams(int port) {
-    return Arrays.asList("-Xdebug",
-        String.format("-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=%d", port));
+    return Collections.singletonList(
+        String.format("-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=%d", port));
   }
 
   /**
@@ -607,17 +767,13 @@ public class MiniAccumuloClusterImpl implements AccumuloCluster {
   }
 
   List<ProcessReference> references(Process... procs) {
-    List<ProcessReference> result = new ArrayList<>();
-    for (Process proc : procs) {
-      result.add(new ProcessReference(proc));
-    }
-    return result;
+    return Stream.of(procs).map(ProcessReference::new).collect(toList());
   }
 
   public Map<ServerType,Collection<ProcessReference>> getProcesses() {
     Map<ServerType,Collection<ProcessReference>> result = new HashMap<>();
     MiniAccumuloClusterControl control = getClusterControl();
-    result.put(ServerType.MASTER, references(control.masterProcess));
+    result.put(ServerType.MANAGER, references(control.managerProcess));
     result.put(ServerType.TABLET_SERVER,
         references(control.tabletServerProcesses.toArray(new Process[0])));
     if (control.zooKeeperProcess != null) {
@@ -645,11 +801,8 @@ public class MiniAccumuloClusterImpl implements AccumuloCluster {
   }
 
   @Override
-  public synchronized ServerContext getServerContext() {
-    if (context == null) {
-      context = new ServerContext(siteConfig);
-    }
-    return context;
+  public ServerContext getServerContext() {
+    return context.get();
   }
 
   /**
@@ -667,7 +820,7 @@ public class MiniAccumuloClusterImpl implements AccumuloCluster {
     MiniAccumuloClusterControl control = getClusterControl();
 
     control.stop(ServerType.GARBAGE_COLLECTOR, null);
-    control.stop(ServerType.MASTER, null);
+    control.stop(ServerType.MANAGER, null);
     control.stop(ServerType.TABLET_SERVER, null);
     control.stop(ServerType.ZOOKEEPER, null);
 
@@ -685,14 +838,15 @@ public class MiniAccumuloClusterImpl implements AccumuloCluster {
       executor = null;
     }
 
-    if (config.useMiniDFS() && miniDFS != null) {
-      miniDFS.shutdown();
+    var miniDFSActual = miniDFS.get();
+    if (config.useMiniDFS() && miniDFSActual != null) {
+      miniDFSActual.shutdown();
     }
     for (Process p : cleanup) {
       p.destroy();
       p.waitFor();
     }
-    miniDFS = null;
+    miniDFS.set(null);
   }
 
   /**
@@ -704,7 +858,7 @@ public class MiniAccumuloClusterImpl implements AccumuloCluster {
 
   @Override
   public AccumuloClient createAccumuloClient(String user, AuthenticationToken token) {
-    return Accumulo.newClient().from(getClientProperties()).as(user, token).build();
+    return Accumulo.newClient().from(clientProperties.get()).as(user, token).build();
   }
 
   @SuppressWarnings("deprecation")
@@ -715,20 +869,19 @@ public class MiniAccumuloClusterImpl implements AccumuloCluster {
   }
 
   @Override
-  public synchronized Properties getClientProperties() {
-    if (clientProperties == null) {
-      clientProperties =
-          Accumulo.newClientProperties().from(config.getClientPropsFile().toPath()).build();
-    }
-    return clientProperties;
+  public Properties getClientProperties() {
+    // return a copy, without re-reading the file
+    var copy = new Properties();
+    copy.putAll(clientProperties.get());
+    return copy;
   }
 
   @Override
   public FileSystem getFileSystem() {
     try {
       return FileSystem.get(new URI(dfsUri), new Configuration());
-    } catch (Exception e) {
-      throw new RuntimeException(e);
+    } catch (IOException | URISyntaxException e) {
+      throw new IllegalStateException(e);
     }
   }
 
@@ -742,7 +895,7 @@ public class MiniAccumuloClusterImpl implements AccumuloCluster {
     return executor;
   }
 
-  int stopProcessWithTimeout(final Process proc, long timeout, TimeUnit unit)
+  public int stopProcessWithTimeout(final Process proc, long timeout, TimeUnit unit)
       throws InterruptedException, ExecutionException, TimeoutException {
     FutureTask<Integer> future = new FutureTask<>(() -> {
       proc.destroy();
@@ -761,31 +914,17 @@ public class MiniAccumuloClusterImpl implements AccumuloCluster {
    *
    * @since 1.6.1
    */
-  public MasterMonitorInfo getMasterMonitorInfo()
+  public ManagerMonitorInfo getManagerMonitorInfo()
       throws AccumuloException, AccumuloSecurityException {
-    MasterClientService.Iface client = null;
-    while (true) {
-      try (AccumuloClient c = Accumulo.newClient().from(getClientProperties()).build()) {
-        client = MasterClient.getConnectionWithRetry((ClientContext) c);
-        return client.getMasterStats(TraceUtil.traceInfo(), ((ClientContext) c).rpcCreds());
-      } catch (ThriftSecurityException exception) {
-        throw new AccumuloSecurityException(exception);
-      } catch (ThriftNotActiveServiceException e) {
-        // Let it loop, fetching a new location
-        log.debug("Contacted a Master which is no longer active, retrying");
-        sleepUninterruptibly(100, TimeUnit.MILLISECONDS);
-      } catch (TException exception) {
-        throw new AccumuloException(exception);
-      } finally {
-        if (client != null) {
-          MasterClient.close(client);
-        }
-      }
+    try (AccumuloClient c = Accumulo.newClient().from(clientProperties.get()).build()) {
+      ClientContext context = (ClientContext) c;
+      return ThriftClientTypes.MANAGER.execute(context,
+          client -> client.getManagerStats(TraceUtil.traceInfo(), context.rpcCreds()));
     }
   }
 
-  public synchronized MiniDFSCluster getMiniDfs() {
-    return this.miniDFS;
+  public MiniDFSCluster getMiniDfs() {
+    return this.miniDFS.get();
   }
 
   @Override
@@ -795,19 +934,21 @@ public class MiniAccumuloClusterImpl implements AccumuloCluster {
 
   @Override
   public Path getTemporaryPath() {
+    String p;
     if (config.useMiniDFS()) {
-      return new Path("/tmp/");
+      p = "/tmp/";
     } else {
       File tmp = new File(config.getDir(), "tmp");
       mkdirs(tmp);
-      return new Path(tmp.toString());
+      p = tmp.toString();
     }
+    return getFileSystem().makeQualified(new Path(p));
   }
 
   @Override
   public AccumuloConfiguration getSiteConfiguration() {
-    return new ConfigurationCopy(
-        Iterables.concat(DefaultConfiguration.getInstance(), config.getSiteConfig().entrySet()));
+    return new ConfigurationCopy(Stream.concat(DefaultConfiguration.getInstance().stream(),
+        config.getSiteConfig().entrySet().stream()));
   }
 
   @Override
