@@ -1,30 +1,34 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   https://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.apache.accumulo.test.functional;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.apache.accumulo.harness.AccumuloITBase.MINI_CLUSTER_ONLY;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assumptions.assumeTrue;
 
 import java.io.IOException;
+import java.time.Duration;
 import java.util.Arrays;
 import java.util.HashMap;
-import java.util.HashSet;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -52,12 +56,10 @@ import org.apache.accumulo.core.security.Authorizations;
 import org.apache.accumulo.core.security.SystemPermission;
 import org.apache.accumulo.core.security.TablePermission;
 import org.apache.accumulo.harness.AccumuloClusterHarness;
-import org.apache.accumulo.test.categories.MiniClusterOnlyTests;
 import org.apache.hadoop.io.Text;
-import org.junit.Assume;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.experimental.categories.Category;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Tag;
+import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -65,18 +67,18 @@ import org.slf4j.LoggerFactory;
  * This test verifies the default permissions so a clean instance must be used. A shared instance
  * might not be representative of a fresh installation.
  */
-@Category(MiniClusterOnlyTests.class)
+@Tag(MINI_CLUSTER_ONLY)
 public class PermissionsIT extends AccumuloClusterHarness {
   private static final Logger log = LoggerFactory.getLogger(PermissionsIT.class);
 
   @Override
-  public int defaultTimeoutSeconds() {
-    return 90;
+  protected Duration defaultTimeout() {
+    return Duration.ofSeconds(90);
   }
 
-  @Before
+  @BeforeEach
   public void limitToMini() throws Exception {
-    Assume.assumeTrue(getClusterType() == ClusterType.MINI);
+    assumeTrue(getClusterType() == ClusterType.MINI);
     try (AccumuloClient c = Accumulo.newClient().from(getClientProps()).build()) {
       Set<String> users = c.securityOperations().listLocalUsers();
       ClusterUser user = getUser(0);
@@ -120,6 +122,7 @@ public class PermissionsIT extends AccumuloClusterHarness {
 
           // test permission before and after granting it
           String tableNamePrefix = getUniqueNames(1)[0];
+          Thread.sleep(1000);
           testMissingSystemPermission(tableNamePrefix, c, rootUser, test_user_client, testUser,
               perm);
           loginAs(rootUser);
@@ -192,13 +195,31 @@ public class PermissionsIT extends AccumuloClusterHarness {
         } catch (AccumuloSecurityException e) {
           loginAs(rootUser);
           if (e.getSecurityErrorCode() != SecurityErrorCode.PERMISSION_DENIED
-              || map(root_client.tableOperations().getProperties(tableName))
+              || root_client.tableOperations().getConfiguration(tableName)
+                  .get(Property.TABLE_BLOOM_ERRORRATE.getKey()).equals("003.14159%"))
+            throw e;
+        }
+        try {
+          // Add test for modifyProperties
+          loginAs(testUser);
+          test_user_client.tableOperations().modifyProperties(tableName, properties -> {
+            properties.put(Property.TABLE_BLOOM_ERRORRATE.getKey(), "003.14159%");
+          });
+          throw new IllegalStateException("Should NOT be able to set a table property");
+        } catch (AccumuloSecurityException e) {
+          loginAs(rootUser);
+          if (e.getSecurityErrorCode() != SecurityErrorCode.PERMISSION_DENIED
+              || root_client.tableOperations().getConfiguration(tableName)
                   .get(Property.TABLE_BLOOM_ERRORRATE.getKey()).equals("003.14159%"))
             throw e;
         }
         loginAs(rootUser);
         root_client.tableOperations().setProperty(tableName,
             Property.TABLE_BLOOM_ERRORRATE.getKey(), "003.14159%");
+        // add check on modify properties
+        root_client.tableOperations().modifyProperties(tableName, properties -> {
+          properties.put(Property.TABLE_BLOOM_SIZE.getKey(), "2048576");
+        });
         try {
           loginAs(testUser);
           test_user_client.tableOperations().removeProperty(tableName,
@@ -207,7 +228,7 @@ public class PermissionsIT extends AccumuloClusterHarness {
         } catch (AccumuloSecurityException e) {
           loginAs(rootUser);
           if (e.getSecurityErrorCode() != SecurityErrorCode.PERMISSION_DENIED
-              || !map(root_client.tableOperations().getProperties(tableName))
+              || !root_client.tableOperations().getConfiguration(tableName)
                   .get(Property.TABLE_BLOOM_ERRORRATE.getKey()).equals("003.14159%"))
             throw e;
         }
@@ -276,7 +297,35 @@ public class PermissionsIT extends AccumuloClusterHarness {
         }
         break;
       case SYSTEM:
-        // test for system permission would go here
+        try {
+          // Test setProperty
+          loginAs(testUser);
+          test_user_client.instanceOperations()
+              .setProperty(Property.TSERV_TOTAL_MUTATION_QUEUE_MAX.getKey(), "10000");
+          throw new IllegalStateException("Should NOT be able to set System Property");
+        } catch (AccumuloSecurityException e) {
+          loginAs(rootUser);
+          if (e.getSecurityErrorCode() != SecurityErrorCode.PERMISSION_DENIED
+              || root_client.instanceOperations().getSystemConfiguration()
+                  .get(Property.TSERV_TOTAL_MUTATION_QUEUE_MAX.getKey()).equals("10000"))
+            throw e;
+        }
+        // Test removal of property
+        loginAs(rootUser);
+        root_client.instanceOperations()
+            .setProperty(Property.TSERV_TOTAL_MUTATION_QUEUE_MAX.getKey(), "10000");
+        try {
+          loginAs(testUser);
+          test_user_client.instanceOperations()
+              .removeProperty(Property.TSERV_TOTAL_MUTATION_QUEUE_MAX.getKey());
+          throw new IllegalStateException("Should NOT be able to remove System Property");
+        } catch (AccumuloSecurityException e) {
+          loginAs(rootUser);
+          if (e.getSecurityErrorCode() != SecurityErrorCode.PERMISSION_DENIED
+              || !root_client.instanceOperations().getSystemConfiguration()
+                  .get(Property.TSERV_TOTAL_MUTATION_QUEUE_MAX.getKey()).equals("10000"))
+            throw e;
+        }
         break;
       case CREATE_NAMESPACE:
         namespace = "__CREATE_NAMESPACE_WITHOUT_PERM_TEST__";
@@ -318,13 +367,31 @@ public class PermissionsIT extends AccumuloClusterHarness {
         } catch (AccumuloSecurityException e) {
           loginAs(rootUser);
           if (e.getSecurityErrorCode() != SecurityErrorCode.PERMISSION_DENIED
-              || map(root_client.namespaceOperations().getProperties(namespace))
+              || root_client.namespaceOperations().getConfiguration(namespace)
+                  .get(Property.TABLE_BLOOM_ERRORRATE.getKey()).equals("003.14159%"))
+            throw e;
+        }
+        try {
+          loginAs(testUser);
+          // Verify modifyProperties also checks permissions
+          test_user_client.namespaceOperations().modifyProperties(namespace, properties -> {
+            properties.put(Property.TABLE_BLOOM_ERRORRATE.getKey(), "003.14159%");
+          });
+          throw new IllegalStateException("Should NOT be able to set a namespace property");
+        } catch (AccumuloSecurityException e) {
+          loginAs(rootUser);
+          if (e.getSecurityErrorCode() != SecurityErrorCode.PERMISSION_DENIED
+              || root_client.namespaceOperations().getConfiguration(namespace)
                   .get(Property.TABLE_BLOOM_ERRORRATE.getKey()).equals("003.14159%"))
             throw e;
         }
         loginAs(rootUser);
         root_client.namespaceOperations().setProperty(namespace,
             Property.TABLE_BLOOM_ERRORRATE.getKey(), "003.14159%");
+        // add check on modify properties
+        root_client.namespaceOperations().modifyProperties(namespace, properties -> {
+          properties.put(Property.TABLE_BLOOM_SIZE.getKey(), "2048576");
+        });
         try {
           loginAs(testUser);
           test_user_client.namespaceOperations().removeProperty(namespace,
@@ -333,7 +400,7 @@ public class PermissionsIT extends AccumuloClusterHarness {
         } catch (AccumuloSecurityException e) {
           loginAs(rootUser);
           if (e.getSecurityErrorCode() != SecurityErrorCode.PERMISSION_DENIED
-              || !map(root_client.namespaceOperations().getProperties(namespace))
+              || !root_client.namespaceOperations().getConfiguration(namespace)
                   .get(Property.TABLE_BLOOM_ERRORRATE.getKey()).equals("003.14159%"))
             throw e;
         }
@@ -352,7 +419,7 @@ public class PermissionsIT extends AccumuloClusterHarness {
         break;
       case OBTAIN_DELEGATION_TOKEN:
         if (saslEnabled()) {
-          // TODO Try to obtain a delegation token without the permission
+          // not implemented
         }
         break;
       case GRANT:
@@ -410,14 +477,14 @@ public class PermissionsIT extends AccumuloClusterHarness {
         test_user_client.tableOperations().setProperty(tableName,
             Property.TABLE_BLOOM_ERRORRATE.getKey(), "003.14159%");
         loginAs(rootUser);
-        Map<String,String> properties = map(root_client.tableOperations().getProperties(tableName));
+        Map<String,String> properties = root_client.tableOperations().getConfiguration(tableName);
         if (!properties.get(Property.TABLE_BLOOM_ERRORRATE.getKey()).equals("003.14159%"))
           throw new IllegalStateException("Should be able to set a table property");
         loginAs(testUser);
         test_user_client.tableOperations().removeProperty(tableName,
             Property.TABLE_BLOOM_ERRORRATE.getKey());
         loginAs(rootUser);
-        properties = map(root_client.tableOperations().getProperties(tableName));
+        properties = root_client.tableOperations().getConfiguration(tableName);
         if (properties.get(Property.TABLE_BLOOM_ERRORRATE.getKey()).equals("003.14159%"))
           throw new IllegalStateException("Should be able to remove a table property");
         loginAs(testUser);
@@ -462,7 +529,22 @@ public class PermissionsIT extends AccumuloClusterHarness {
           throw new IllegalStateException("Should be able to alter a user");
         break;
       case SYSTEM:
-        // test for system permission would go here
+        // Test setProperty
+        loginAs(testUser);
+        test_user_client.instanceOperations()
+            .setProperty(Property.TSERV_TOTAL_MUTATION_QUEUE_MAX.getKey(), "10000");
+        loginAs(rootUser);
+        if (!root_client.instanceOperations().getSystemConfiguration()
+            .get(Property.TSERV_TOTAL_MUTATION_QUEUE_MAX.getKey()).equals("10000"))
+          throw new IllegalStateException("Should be able to set system property");
+        // Test removal of property
+        loginAs(testUser);
+        test_user_client.instanceOperations()
+            .removeProperty(Property.TSERV_TOTAL_MUTATION_QUEUE_MAX.getKey());
+        loginAs(rootUser);
+        if (root_client.instanceOperations().getSystemConfiguration()
+            .get(Property.TSERV_TOTAL_MUTATION_QUEUE_MAX.getKey()).equals("10000"))
+          throw new IllegalStateException("Should be able remove systemproperty");
         break;
       case CREATE_NAMESPACE:
         namespace = "__CREATE_NAMESPACE_WITH_PERM_TEST__";
@@ -491,15 +573,14 @@ public class PermissionsIT extends AccumuloClusterHarness {
         test_user_client.namespaceOperations().setProperty(namespace,
             Property.TABLE_BLOOM_ERRORRATE.getKey(), "003.14159%");
         loginAs(rootUser);
-        Map<String,String> propies =
-            map(root_client.namespaceOperations().getProperties(namespace));
+        Map<String,String> propies = root_client.namespaceOperations().getConfiguration(namespace);
         if (!propies.get(Property.TABLE_BLOOM_ERRORRATE.getKey()).equals("003.14159%"))
           throw new IllegalStateException("Should be able to set a table property");
         loginAs(testUser);
         test_user_client.namespaceOperations().removeProperty(namespace,
             Property.TABLE_BLOOM_ERRORRATE.getKey());
         loginAs(rootUser);
-        propies = map(root_client.namespaceOperations().getProperties(namespace));
+        propies = root_client.namespaceOperations().getConfiguration(namespace);
         if (propies.get(Property.TABLE_BLOOM_ERRORRATE.getKey()).equals("003.14159%"))
           throw new IllegalStateException("Should be able to remove a table property");
         loginAs(testUser);
@@ -511,7 +592,7 @@ public class PermissionsIT extends AccumuloClusterHarness {
         break;
       case OBTAIN_DELEGATION_TOKEN:
         if (saslEnabled()) {
-          // TODO Try to obtain a delegation token with the permission
+          // not implemented
         }
         break;
       case GRANT:
@@ -522,10 +603,10 @@ public class PermissionsIT extends AccumuloClusterHarness {
         test_user_client.securityOperations().grantSystemPermission(testUser.getPrincipal(),
             SystemPermission.CREATE_TABLE);
         loginAs(rootUser);
-        assertTrue("Test user should have CREATE_TABLE", root_client.securityOperations()
-            .hasSystemPermission(testUser.getPrincipal(), SystemPermission.CREATE_TABLE));
-        assertTrue("Test user should have GRANT", root_client.securityOperations()
-            .hasSystemPermission(testUser.getPrincipal(), SystemPermission.GRANT));
+        assertTrue(root_client.securityOperations().hasSystemPermission(testUser.getPrincipal(),
+            SystemPermission.CREATE_TABLE), "Test user should have CREATE_TABLE");
+        assertTrue(root_client.securityOperations().hasSystemPermission(testUser.getPrincipal(),
+            SystemPermission.GRANT), "Test user should have GRANT");
         root_client.securityOperations().revokeSystemPermission(testUser.getPrincipal(),
             SystemPermission.CREATE_TABLE);
         break;
@@ -579,11 +660,14 @@ public class PermissionsIT extends AccumuloClusterHarness {
         loginAs(rootUser);
         verifyHasOnlyTheseTablePermissions(c, c.whoami(), MetadataTable.NAME, TablePermission.READ,
             TablePermission.ALTER_TABLE);
-        verifyHasOnlyTheseTablePermissions(c, principal, MetadataTable.NAME, TablePermission.READ);
         String tableName = getUniqueNames(1)[0] + "__TABLE_PERMISSION_TEST__";
 
         // test each permission
         for (TablePermission perm : TablePermission.values()) {
+          if (perm == TablePermission.ALTER_TABLE) {
+            // we give test user client ALTER_TABLE permission when creating table
+            continue;
+          }
           log.debug("Verifying the {} permission", perm);
 
           // test permission before and after granting it
@@ -592,14 +676,15 @@ public class PermissionsIT extends AccumuloClusterHarness {
           testMissingTablePermission(test_user_client, perm, tableName);
           loginAs(rootUser);
           c.securityOperations().grantTablePermission(principal, tableName, perm);
-          verifyHasOnlyTheseTablePermissions(c, principal, tableName, perm);
+          verifyHasOnlyTheseTablePermissions(c, principal, tableName, perm,
+              TablePermission.ALTER_TABLE);
           loginAs(testUser);
           testGrantedTablePermission(test_user_client, perm, tableName);
 
           loginAs(rootUser);
           createTestTable(c, principal, tableName);
           c.securityOperations().revokeTablePermission(principal, tableName, perm);
-          verifyHasNoTablePermissions(c, principal, tableName, perm);
+          verifyHasOnlyAlterTablePermission(c, principal, tableName, perm);
         }
       }
     }
@@ -613,13 +698,13 @@ public class PermissionsIT extends AccumuloClusterHarness {
       // put in some initial data
       try (BatchWriter writer = c.createBatchWriter(tableName)) {
         Mutation m = new Mutation(new Text("row"));
-        m.put(new Text("cf"), new Text("cq"), new Value("val".getBytes()));
+        m.put("cf", "cq", "val");
         writer.addMutation(m);
       }
 
       // verify proper permissions for creator and test user
       verifyHasOnlyTheseTablePermissions(c, c.whoami(), tableName, TablePermission.values());
-      verifyHasNoTablePermissions(c, testUser, tableName, TablePermission.values());
+      verifyHasOnlyAlterTablePermission(c, testUser, tableName, TablePermission.values());
 
     }
   }
@@ -649,10 +734,10 @@ public class PermissionsIT extends AccumuloClusterHarness {
         try {
           try (BatchWriter bw = test_user_client.createBatchWriter(tableName)) {
             m = new Mutation(new Text("row"));
-            m.put(new Text("a"), new Text("b"), new Value("c".getBytes()));
+            m.put("a", "b", "c");
             bw.addMutation(m);
           } catch (MutationsRejectedException e1) {
-            if (e1.getSecurityErrorCodes().size() > 0)
+            if (!e1.getSecurityErrorCodes().isEmpty())
               throw new AccumuloSecurityException(test_user_client.whoami(),
                   org.apache.accumulo.core.clientImpl.thrift.SecurityErrorCode.PERMISSION_DENIED,
                   e1);
@@ -662,16 +747,27 @@ public class PermissionsIT extends AccumuloClusterHarness {
           if (e.getSecurityErrorCode() != SecurityErrorCode.PERMISSION_DENIED)
             throw e;
         }
+        // Now see if we can flush, this should be allowed because we give the user ALTER_TABLE
+        test_user_client.tableOperations().flush(tableName, new Text("myrow"), new Text("myrow~"),
+            false);
         break;
       case BULK_IMPORT:
         // test for bulk import permission would go here
         break;
       case ALTER_TABLE:
         Map<String,Set<Text>> groups = new HashMap<>();
-        groups.put("tgroup", new HashSet<>(Arrays.asList(new Text("t1"), new Text("t2"))));
+        groups.put("tgroup", Set.of(new Text("t1"), new Text("t2")));
         try {
           test_user_client.tableOperations().setLocalityGroups(tableName, groups);
           throw new IllegalStateException("User should not be able to set locality groups");
+        } catch (AccumuloSecurityException e) {
+          if (e.getSecurityErrorCode() != SecurityErrorCode.PERMISSION_DENIED)
+            throw e;
+        }
+        try {
+          test_user_client.tableOperations().flush(tableName, new Text("myrow"), new Text("myrow~"),
+              false);
+          throw new IllegalStateException("Should NOT be able to flush a table");
         } catch (AccumuloSecurityException e) {
           if (e.getSecurityErrorCode() != SecurityErrorCode.PERMISSION_DENIED)
             throw e;
@@ -720,15 +816,17 @@ public class PermissionsIT extends AccumuloClusterHarness {
     switch (perm) {
       case READ:
         try (Scanner scanner = test_user_client.createScanner(tableName, Authorizations.EMPTY)) {
-          Iterator<Entry<Key,Value>> iter = scanner.iterator();
-          while (iter.hasNext())
-            iter.next();
+          for (Entry<Key,Value> keyValueEntry : scanner) {
+            assertNotNull(keyValueEntry);
+          }
         }
         break;
       case WRITE:
+        test_user_client.tableOperations().flush(tableName, new Text("myrow"), new Text("myrow~"),
+            false);
         try (BatchWriter bw = test_user_client.createBatchWriter(tableName)) {
           Mutation m = new Mutation(new Text("row"));
-          m.put(new Text("a"), new Text("b"), new Value("c".getBytes()));
+          m.put("a", "b", "c");
           bw.addMutation(m);
         }
         break;
@@ -736,6 +834,8 @@ public class PermissionsIT extends AccumuloClusterHarness {
         // test for bulk import permission would go here
         break;
       case ALTER_TABLE:
+        test_user_client.tableOperations().flush(tableName, new Text("myrow"), new Text("myrow~"),
+            false);
         testArbitraryProperty(test_user_client, tableName, true);
         break;
       case DROP_TABLE:
@@ -775,12 +875,17 @@ public class PermissionsIT extends AccumuloClusterHarness {
     }
   }
 
-  private void verifyHasNoTablePermissions(AccumuloClient root_client, String user, String table,
-      TablePermission... perms) throws AccumuloException, AccumuloSecurityException {
-    for (TablePermission p : perms)
-      if (root_client.securityOperations().hasTablePermission(user, table, p))
+  private void verifyHasOnlyAlterTablePermission(AccumuloClient root_client, String user,
+      String table, TablePermission... perms) throws AccumuloException, AccumuloSecurityException {
+    for (TablePermission p : perms) {
+      if (p == TablePermission.ALTER_TABLE) {
+        if (!root_client.securityOperations().hasTablePermission(user, table, p)) {
+          root_client.securityOperations().grantTablePermission(user, table, p);
+        }
+      } else if (root_client.securityOperations().hasTablePermission(user, table, p))
         throw new IllegalStateException(
             user + " SHOULD NOT have table permission " + p + " for table " + table);
+    }
   }
 
   private void testArbitraryProperty(AccumuloClient c, String tableName, boolean havePerm)
@@ -796,11 +901,9 @@ public class PermissionsIT extends AccumuloClusterHarness {
       c.tableOperations().setProperty(tableName, propertyName, description1);
 
       // Loop through properties to make sure the new property is added to the list
-      int count = 0;
-      for (Entry<String,String> property : c.tableOperations().getProperties(tableName)) {
-        if (property.getKey().equals(propertyName) && property.getValue().equals(description1))
-          count++;
-      }
+      long count = c.tableOperations().getConfiguration(tableName).entrySet().stream()
+          .filter(e -> e.getKey().equals(propertyName) && e.getValue().equals(description1))
+          .count();
       assertEquals(count, 1);
 
       // Set the property as something different
@@ -808,22 +911,17 @@ public class PermissionsIT extends AccumuloClusterHarness {
       c.tableOperations().setProperty(tableName, propertyName, description2);
 
       // Loop through properties to make sure the new property is added to the list
-      count = 0;
-      for (Entry<String,String> property : c.tableOperations().getProperties(tableName)) {
-        if (property.getKey().equals(propertyName) && property.getValue().equals(description2))
-          count++;
-      }
+      count = c.tableOperations().getConfiguration(tableName).entrySet().stream()
+          .filter(e -> e.getKey().equals(propertyName) && e.getValue().equals(description2))
+          .count();
       assertEquals(count, 1);
 
       // Remove the property and make sure there is no longer a value associated with it
       c.tableOperations().removeProperty(tableName, propertyName);
 
       // Loop through properties to make sure the new property is added to the list
-      count = 0;
-      for (Entry<String,String> property : c.tableOperations().getProperties(tableName)) {
-        if (property.getKey().equals(propertyName))
-          count++;
-      }
+      count = c.tableOperations().getConfiguration(tableName).entrySet().stream()
+          .filter(e -> e.getKey().equals(propertyName)).count();
       assertEquals(count, 0);
       if (!havePerm)
         throw new IllegalStateException("User should not been able to alter property.");
